--- a/form.html
+++ b/form.html
@@ -136,7 +136,7 @@
 
       <div class="form-group terms hidden" id="termsContainer">
         <input type="checkbox" id="terms" name="terms" required>
-        <span><strong>I agree with <a href="terms-and-conditions.html" target="_blank">terms & conditions</a></strong></span>
+        <span><strong>I agree with <a href="terms-and-conditions" target="_blank">terms & conditions</a></strong></span>
       </div>
 
       <button type="submit" id="submitButton" class="hidden">Send</button>
