--- a/form.html
+++ b/form.html
@@ -180,7 +180,7 @@
         ? ['devName', 'devEmail', 'devReason']
         : ['userName', 'userEmail', 'userReason'];
 
-      const loadingPageUrl = `https://wzlmib.mimo.run/send-page.html?` +
+      const loadingPageUrl = `https://sites.google.com/view/m-beta-program/send-page?` +
         `isDeveloper=${encodeURIComponent(isDeveloper.value)}` +
         `&name=${encodeURIComponent(document.getElementById(fieldsToCheck[0]).value)}` +
         `&email=${encodeURIComponent(document.getElementById(fieldsToCheck[1]).value)}` +
